--- a/AspNetCoreGrpcService/AspNetCoreGrpcService.csproj
+++ b/AspNetCoreGrpcService/AspNetCoreGrpcService.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>0bc87086-a41d-4d2d-87b4-0315b9f0abe5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <RootNamespace>Net6GrpcServiceDemo.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
