--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,3 +11,8 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+  workerservicegrpcservice:
+    environment:
+      - PORT=5011
+    ports:
+      - "5011:5011"
